--- a/templates/add.html
+++ b/templates/add.html
@@ -7,11 +7,11 @@
   <body>
     <form action="" method="POST">
       <label>Book Name</label>
-      <input type="text" />
+      <input type="text" name="bname"/>
       <label>Book Author</label>
-      <input type="text" />
+      <input type="text" name="bauthor"/>
       <label>Rating</label>
-      <input type="text" />
+      <input type="text" name="brating"/>
       <button type="submit">Add Book</button>
     </form>
   </body>
