--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,13 @@
   <body>
     <h1>My Library</h1>
     
-    {% if data[0] == None %}
+    {% if data == 1 %}
 
     <h1>Library is empty.</h1>
 
-    {% else %}
+    
+
+    {% elif data != 1 %}
     {% for value in data %}
     
     <ul>
