--- a/templates/add.html
+++ b/templates/add.html
@@ -12,7 +12,9 @@
       <input type="text" name="bauthor"/>
       <label>Rating</label>
       <input type="text" name="brating"/>
-      <button type="submit" href="{{url_for('home')}}">Add Book</button>
+      
+      <button type="submit" value="{{url_for('home')}}">Add Book</button>
+    
     </form>
   </body>
 </html>
