--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       
       
       <ul>
-        <li>{{value["title"]}}-{{value['author']}}-{{value["rating"]}}</li>
+        <li>{{value[0]}}-{{value[1]}}-{{value[2]}}</li>
       </ul>
 
 
